# resolution_solver

./: Cargo.toml  README.md  app.js  index.html  main.js  styles.css
pkg/: package.json  resolution_solver.d.ts  resolution_solver.js  resolution_solver_bg.wasm  resolution_solver_bg.wasm.d.ts
src/: lib.rs  resolution.rs
src/resolution/: clause.rs  clause_parser.rs
