[package]
name = "resolution_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "HtmlInputElement",
  "Window",
]

[lib]
crate-type = ["cdylib", "rlib"]